# telegram_ai

./: .dockerignore  .env.local  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  fastapi.dockerfile  human_scanner_bot.dockerfile  pyproject.toml  requirements.txt
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 003c5a04a396_change_uq_index_at_tg_post_reaction.py  0280802401d9_create_news_posts_table.py  02a613b1c945_add_status_column_to_bots.py  04bff80402d0_add_tg_users_tg_user_comments_tg_users_.py  130d878b4e64_add_phone_number_to_bots.py  1d8d301d00cf_add_task_name_to_bot.py  4043704e2907_add_tiktok_users_table.py  4e9e8a7f5810_add_reaction_to_tg_leads_table.py  53e8f4406f11_add_moodflow_user_reactions.py  6a3078200547_add_app_id_and_token_and_role_to_bot_.py  6c7eeb1be6ed_add_channel_from_to_tg_users_invited.py  6d42576d6532_add_started_at_column_to_bots.py  83d4a19fc99c_add_tg_bot_messages_table.py  873d3dd90d1a_add_unique_index_to_external_id.py  87bcf180ee6e_add_sender_name_column_to_tg_post_.py  8b05799aa604_create_tg_post_reactions_table.py  8ebda4843d2b_add_user_memory_tables.py  9159f9b9570c_create_ig_users_table.py  96e7ac0e949b_create_bots_and_bot_comments_tables.py  a3e946294f92_add_updated_at_column_to_tg_users.py  bdb14d0e3187_create_tg_leads_table.py  c7c456579697_change_post_id_unique_index_in_tg_leads.py  d13707c1e05b_post_reactions_change_bot_id_and_post_id.py
app/: channels_listener.py  config.py  dependencies.py  main.py
app/bots/: utils.py
app/configs/: logger.py  settings.json
tests/: conftest.py
(+149 files in other folders)
